<resources>
    <string name="app_name">InstaPost</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="create_account">Create Account</string>
    <string name="exist_account">Already have an account? Login</string>
    <string name="invalid_name">Name cannot be empty</string>
    <string name="invalid_username">Username cannot be empty</string>
    <string name="username_exists">Username already exists.</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="invalid_password">At least 6 characters\nAt least one digit\nAt least one
    uppercase\nNo whitespace in between</string>
    <string name="create_new_post">Create New Post</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="registration_success">Registration success!</string>
    <string name="login_failed">Incorrect Email or Password.</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_greetings_start">Hello\t</string>
    <string name="nav_header_greetings_end">!</string>

    <string name="all_users">Users</string>
    <string name="all_tags">Tags</string>

    <string name="drawer_item_1">View All Users</string>
    <string name="drawer_item_2">View All Tags</string>
    <string name="drawer_item_3">Switch Between Single or Grid</string>
    <string name="no_users">There are no Users yet.</string>
    <string name="no_posts">User has no post.</string>
    <string name="no_tags">There are no hashtags.</string>

    <string name="caption">Write a caption...</string>
    <string name="hashtag">Include a hashtag</string>
    <string name="invalid_hashtag">"At least 1 hashtag required.\nHashtag can only contain
        alphabetic letters."</string>
    <string name="no_photo">You must upload a photo.</string>
    <string name="no_camera">No camera available.</string>
    <string name="cancelled_photo">Photo not taken.</string>
    <string name="cancelled_gallery">No photo chosen.</string>
    <string name="create_post">Create Post</string>
    <string name="create_post_successful">Post created!</string>
    <string name="cancel_post">Cancel Post</string>
    <string name="failed_upload">Failed to upload picture to cloud storage</string>

    <string name="date_format">yyyyMMdd_HHmmss</string>
    <string name="create_image_path_start">JPEG_</string>
    <string name="create_image_path_end">_</string>
    <string name="create_image_suffix">.jpg</string>

    <string name="post_option">&#8942;</string>
    <string name="download_image">Download Image</string>
    <string name="download_successful">Download Sucessful!</string>
    <string name="download_unsuccessful">Download Unsuccessful.</string>
    <string name="delete_post">Delete Post</string>
    <string name='delete_photo_unsuccessful'>Delete photo failed...</string>

    <string name="image_dialog_title">Select Action</string>
    <string name="image_dialog_gallery">Select photo from gallery</string>
    <string name="image_dialog_camera">Capture photo from camera</string>
    <string name="image_chooser_title">Select Image</string>

</resources>
