<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/createpost_image"
            android:layout_width="@dimen/create_picture_size"
            android:layout_height="@dimen/create_picture_size"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            tools:src="@drawable/logo"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/createpost_capture"
            android:layout_width="@dimen/create_picture_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_create_post_dark"/>


        <EditText android:id="@+id/createpost_input_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/caption" />

        <EditText android:id="@+id/createpost_input_hashtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hashtag"/>

        <ProgressBar
            android:id="@+id/createpost_loading"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createpost_btn_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/create_post"/>

        <TextView android:id="@+id/createpost_link_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_post"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>
</ScrollView>